@@ -88,7 +88,7 @@ namespace C.DefaultSettings
             settings.IncludePaths = new Bam.Core.Array<Bam.Core.TokenizedString>();
             settings.PreprocessorDefines = new PreprocessorDefinitions();
             settings.PreprocessorUndefines = new Bam.Core.StringArray();
-            settings.SystemIncludePaths = new Bam.Core.Array<Bam.Core.TokenizedString>();
+            settings.SystemIncludePaths = new Bam.Core.TokenizedStringArray();
         }
 
         public static void
@@ -100,7 +100,7 @@ namespace C.DefaultSettings
             shared.Bits = (lhs.Bits == rhs.Bits) ? lhs.Bits : null;
             shared.PreprocessorDefines = new PreprocessorDefinitions(lhs.PreprocessorDefines.Intersect(rhs.PreprocessorDefines));
             shared.IncludePaths = lhs.IncludePaths.Intersect(rhs.IncludePaths);
-            shared.SystemIncludePaths = lhs.SystemIncludePaths.Intersect(rhs.SystemIncludePaths);
+            shared.SystemIncludePaths = new Bam.Core.TokenizedStringArray(lhs.SystemIncludePaths.Intersect(rhs.SystemIncludePaths));
             shared.OutputType = (lhs.OutputType == rhs.OutputType) ? lhs.OutputType : null;
             shared.DebugSymbols = (lhs.DebugSymbols == rhs.DebugSymbols) ? lhs.DebugSymbols : null;
             shared.WarningsAsErrors = (lhs.WarningsAsErrors == rhs.WarningsAsErrors) ? lhs.WarningsAsErrors : null;
@@ -120,7 +120,7 @@ namespace C.DefaultSettings
             delta.Bits = (lhs.Bits != rhs.Bits) ? lhs.Bits : null;
             delta.PreprocessorDefines = new PreprocessorDefinitions(lhs.PreprocessorDefines.Except(rhs.PreprocessorDefines));
             delta.IncludePaths = new Bam.Core.Array<TokenizedString>(lhs.IncludePaths.Except(rhs.IncludePaths));
-            delta.SystemIncludePaths = new Bam.Core.Array<TokenizedString>(lhs.SystemIncludePaths.Except(rhs.SystemIncludePaths));
+            delta.SystemIncludePaths = new Bam.Core.TokenizedStringArray(lhs.SystemIncludePaths.Except(rhs.SystemIncludePaths));
             delta.OutputType = (lhs.OutputType != rhs.OutputType) ? lhs.OutputType : null;
             delta.DebugSymbols = (lhs.DebugSymbols != rhs.DebugSymbols) ? lhs.DebugSymbols : null;
             delta.WarningsAsErrors = (lhs.WarningsAsErrors != rhs.WarningsAsErrors) ? lhs.WarningsAsErrors : null;
