@@ -51,7 +51,7 @@ namespace C
             set;
         }
 
-        Bam.Core.Array<Bam.Core.TokenizedString> SystemIncludePaths
+        Bam.Core.TokenizedStringArray SystemIncludePaths
         {
             get;
             set;
