@@ -93,7 +93,7 @@ namespace VisualC
             set;
         }
 
-        Bam.Core.Array<Bam.Core.TokenizedString> C.ICommonCompilerSettings.SystemIncludePaths
+        Bam.Core.TokenizedStringArray C.ICommonCompilerSettings.SystemIncludePaths
         {
             get;
             set;
